<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="@string/video1"
            android:layout_marginBottom="10dp"
            />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="@string/video2"
            android:layout_marginBottom="10dp"
            />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="@string/video3"
            android:layout_marginBottom="10dp"
            />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="@string/video3"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>
